# calibmar

./: CMakeLists.txt  README.md
config/: april_big.yaml  april_small.yaml  calibration_condria.yaml  calibration_condria_fisheye.yaml  gopro4.yaml
scripts/: edgedetection.py  edgedetection_ros.py  gpVid2imgs.py  image_resize.py  selection_vid2imgs.py  vid2imgs.py
src/app/: CMakeLists.txt
src/app/ui/: main_window.cpp  main_window.h
src/app/ui/dialogs/: CMakeLists.txt  stereo_file_calibration_dialog.cpp  stereo_file_calibration_dialog.h  undistortion_estimation_dialog.cpp  undistortion_estimation_dialog.h
src/app/ui/utils/: CMakeLists.txt  calibration_target_visualization.cpp  calibration_target_visualization.h  files_calibration_runner.cpp  stereo_files_calibration_runner.cpp  undistortion_estimation_runner.cpp  undistortion_estimation_runner.h
src/app/ui/widgets/: CMakeLists.txt  undistortion_estimation_options_widget.cpp  undistortion_estimation_options_widget.h  undistortion_estimation_result_widget.cpp  undistortion_estimation_result_widget.h  undistortion_estimation_widget.cpp  undistortion_estimation_widget.h
src/app/undistortion/: undistorter.cpp  undistortion_estimation.cpp  undistortion_visualizer.cpp
src/calibmar/: CMakeLists.txt
src/calibmar/apriltags/: CMakeLists.txt  pch.h
src/calibmar/calibrators/: stereo_calibrator.cpp
src/calibmar/core/: image.h
src/calibmar/extractors/: aruco_board_extractor.cpp  aruco_board_extractor.h
src/calibmar/kalibr_extractors/: CMakeLists.txt  GridCalibrationTargetAprilgrid.cpp  GridCalibrationTargetAprilgrid.hpp  GridCalibrationTargetBase.cpp  GridCalibrationTargetBase.hpp  GridCalibrationTargetCheckerboard.cpp  GridCalibrationTargetCheckerboard.hpp  GridCalibrationTargetCirclegrid.cpp  GridCalibrationTargetCirclegrid.hpp
src/calibmar/readers/: filesystem_reader.cpp
